--- a/src/main/resources/templates/management/articles.html
+++ b/src/main/resources/templates/management/articles.html
@@ -27,19 +27,19 @@
         <tbody>
           <tr>
             <td>1</td>
-            <td>새 글</td>
+            <td><a data-toggle="modal" data-target="#layout-modal">새 글</a></td>
             <td>Uno</td>
             <td><time datetime="2022-01-01T00:00:00">2022-01-01 00:00:00</time></td>
           </tr>
           <tr>
             <td>2</td>
-            <td>아무글</td>
+            <td><a data-toggle="modal" data-target="#layout-modal">아무글</a></td>
             <td>Uno</td>
             <td><time datetime="2022-01-02T00:00:00">2022-01-02 00:00:00</time></td>
           </tr>
           <tr>
             <td>3</td>
-            <td>스프링 부트 블로그 정리</td>
+            <td><a data-toggle="modal" data-target="#layout-modal">스프링 부트 블로그 정리</a></td>
             <td>Uno</td>
             <td><time datetime="2022-01-03T00:00:00">2022-01-03 00:00:00</time></td>
           </tr>
@@ -55,6 +55,9 @@
       </table>
     </main>
     <!-- /.content -->
+
+    <div class="modal fade" id="layout-modal"></div>
+    <!-- /.modal -->
 
     <aside id="layout-right-aside">오른쪽 사이드 바 삽입부</aside>
     <footer id="layout-footer">푸터 삽입부</footer>
@@ -83,6 +86,24 @@
         "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"],
         "pageLength": 10
       }).buttons().container().appendTo('#main-table_wrapper .col-md-6:eq(0)'); // main-table_wrapper ID는 플러그인에 의해 자동 생성됨
+    });
+  </script>
+  <script>
+    $(document).ready(() => {
+      $('#layout-modal').on('show.bs.modal', (event) => {
+        const id = $(event.relatedTarget).data('id');
+
+        fetch(`/management/articles/${id}`)
+            .then(response => response.json())
+            .then(data => {
+              $('.modal-title').text(data.title);
+              $('.modal-body pre').text(data.content);
+              $('.modal-footer form').attr('action', `/management/articles/${id}`);
+            })
+            .catch(error => {
+              console.error('게시글 로딩 실패: ', error);
+            });
+      });
     });
   </script>
 </body>
